@startuml Dreamink Entity Relationship Diagram
!theme plain
skinparam linetype ortho

title Dreamink - Entity Relationship Diagram (UML 2.5)

' Authentication & User Management
entity "users" as users {
  * id : bigint <<PK>>
  --
  * email_address : varchar(255) <<UNIQUE>>
  * password_digest : varchar(255)
  * created_at : timestamp
  * updated_at : timestamp
}

entity "sessions" as sessions {
  * id : bigint <<PK>>
  --
  * user_id : bigint <<FK>>
  ip_address : varchar(255)
  user_agent : varchar(255)
  * created_at : timestamp
  * updated_at : timestamp
}

' Project Management
entity "projects" as projects {
  * id : bigint <<PK>>
  --
  * user_id : bigint <<FK>>
  title : varchar(255)
  genre : varchar(255)
  logline : varchar(255)
  idea : text
  themes : text
  tone : text
  world : text
  storyline : text
  short_synopsis : text
  long_synopsis : text
  characters_summary : text
  * created_at : timestamp
  * updated_at : timestamp
}

entity "ideas" as ideas {
  * id : bigint <<PK>>
  --
  * project_id : bigint <<FK>>
  title : varchar(255)
  description : text
  tags : text
  * created_at : timestamp
  * updated_at : timestamp
}

' Dramatic Structure
entity "acts" as acts {
  * id : bigint <<PK>>
  --
  * project_id : bigint <<FK>>
  title : varchar(255)
  description : text
  position : integer
  * created_at : timestamp
  * updated_at : timestamp
  --
  <<UNIQUE>> (project_id, position)
}

entity "sequences" as sequences {
  * id : bigint <<PK>>
  --
  * act_id : bigint <<FK>>
  project_id : bigint <<FK>>
  title : varchar(255)
  description : text
  position : integer
  * created_at : timestamp
  * updated_at : timestamp
  --
  <<UNIQUE>> (act_id, position)
}

entity "scenes" as scenes {
  * id : bigint <<PK>>
  --
  * sequence_id : bigint <<FK>>
  act_id : bigint <<FK>>
  project_id : bigint <<FK>>
  title : varchar(255)
  description : text
  position : integer
  color : varchar(255)
  time_of_day : varchar(20)
  * created_at : timestamp
  * updated_at : timestamp
  --
  <<UNIQUE>> (sequence_id, position)
}

' Character Management
entity "characters" as characters {
  * id : bigint <<PK>>
  --
  * project_id : bigint <<FK>>
  name : varchar(255)
  * created_at : timestamp
  * updated_at : timestamp
}

entity "character_internal_traits" as character_internal_traits {
  * id : bigint <<PK>>
  --
  * character_id : bigint <<FK>>
  skills : text
  religion : varchar(255)
  spirituality : text
  identity : text
  mental_programs : text
  ethics : text
  sexuality : varchar(255)
  main_motivation : text
  conversation_focus : text
  self_awareness_level : varchar(255)
  time_management : varchar(255)
  artistic_inclinations : text
  heroes_models : text
  political_ideas : text
  authority_relationship : varchar(255)
  vices : text
  temporal_location : varchar(255)
  food_preferences : varchar(255)
  habits : text
  peculiarities : text
  hobbies : text
  charitable_activities : varchar(255)
  beliefs : text
  friendship_relations : text
  values_priorities : text
  * created_at : timestamp
  * updated_at : timestamp
}

entity "character_external_traits" as character_external_traits {
  * id : bigint <<PK>>
  --
  * character_id : bigint <<FK>>
  general_appearance : text
  detailed_appearance : text
  medical_history : text
  education : text
  profession : varchar(255)
  legal_situation : varchar(255)
  economic_situation : varchar(255)
  important_possessions : text
  residence_type : varchar(255)
  usual_location : varchar(255)
  pets : varchar(255)
  family_structure : text
  * created_at : timestamp
  * updated_at : timestamp
}

' Location Management
entity "locations" as locations {
  * id : bigint <<PK>>
  --
  * project_id : bigint <<FK>>
  name : varchar(255)
  description : text
  location_type : varchar(255)
  * created_at : timestamp
  * updated_at : timestamp
}

entity "scene_locations" as scene_locations {
  * id : bigint <<PK>>
  --
  * scene_id : bigint <<FK>>
  * location_id : bigint <<FK>>
  * created_at : timestamp
  * updated_at : timestamp
}

' Relationships - Authentication & User Management
users ||--o{ sessions : "has"
users ||--o{ projects : "owns"

' Relationships - Project to Resources
projects ||--o{ acts : "contains"
projects ||--o{ sequences : "references"
projects ||--o{ scenes : "references"
projects ||--o{ characters : "contains"
projects ||--o{ locations : "contains"
projects ||--o{ ideas : "contains"

' Relationships - Dramatic Structure Hierarchy
acts ||--o{ sequences : "contains"
sequences ||--o{ scenes : "contains"

' Relationships - Scene References
acts ||--o{ scenes : "references"

' Relationships - Character Composition
characters ||--|| character_internal_traits : "has"
characters ||--|| character_external_traits : "has"

' Relationships - Scene-Location (Many-to-Many)
scenes ||--o{ scene_locations : "uses"
locations ||--o{ scene_locations : "used in"

note top of users
  Primary authentication entity.
  Each user can own multiple projects.
  Email address must be unique.
end note

note top of projects
  Central entity representing
  a screenplay project.
  Contains all narrative elements,
  characters, and locations.
end note

note bottom of acts
  Major division in dramatic structure.
  Position is unique within a project.
  Contains sequences.
end note

note bottom of sequences
  Second level of narrative structure.
  Position is unique within an act.
  References project for denormalization.
end note

note bottom of scenes
  Smallest unit of dramatic structure.
  Position is unique within a sequence.
  References both act and project
  for query optimization.
end note

note top of characters
  Automatically creates internal
  and external traits upon creation.
  One-to-one relationship ensures
  traits lifecycle is bound to character.
end note

note bottom of scene_locations
  Join table enabling many-to-many
  relationship between scenes
  and locations.
end note

note bottom of ideas
  Stores creative ideas and notes
  related to the project.
  Supports tagging for organization.
end note

@enduml
